# snakesos

./: CMakeLists.txt  README.md
libraries/: Apple.cpp  Apple.h  Board.cpp  Board.h  Drawable.cpp  Drawable.h  Game.cpp  Game.h  Leaderboard.cpp  Leaderboard.h  Livello.cpp  Livello.h  Menu.cpp  Menu.h  Scoreboard.cpp  Scoreboard.h  Snake.cpp  Snake.h  Snakegame.cpp  Snakegame.h  apple.cpp  apple.h  board.cpp  board.h  drawable.cpp  drawable.h  empty.cpp  empty.h  game.cpp  game.h  leaderboard.cpp  leaderboard.h  livello.cpp  livello.h  menu.cpp  menu.h  snakegame.cpp  snakegame.h
scoreboard/: scoreboard.txt
source/: main.cpp
